examples/invalid/16_tuple_type.lane
module Examples.Invalid16
// invalid: tuple types are not part of v1
pub let pair : (Int, Bool) = (1, true)
